--- a/ProjectPulse.Web/Components/Layout/Sidebar.razor
+++ b/ProjectPulse.Web/Components/Layout/Sidebar.razor
@@ -13,26 +13,26 @@
         </div>
         <div class="row border-bottom sidebar-options">
             <div class="sidebar-options-content">
-                <div class="sidebar-options-content-item sidebar-options-content-item-active">
+                <NavLink href="/" class="sidebar-options-content-item" activeClass="sidebar-options-content-item-active">
                     <img src="img/home.svg" alt="">
                     <p>Home</p>
-                </div>
-                <div class="sidebar-options-content-item">
+                </NavLink>
+                <NavLink href="Messages" class="sidebar-options-content-item" activeClass="sidebar-options-content-item-active">
                     <img src="img/message.svg" alt="">
                     <p>Messages</p>
-                </div>
-                <div class="sidebar-options-content-item">
+                </NavLink>
+                <NavLink href="Tasks" class="sidebar-options-content-item" activeClass="sidebar-options-content-item-active">
                     <img src="img/tasks.svg" alt="">
                     <p>Tasks</p>
-                </div>
-                <div class="sidebar-options-content-item">
+                </NavLink>
+                <NavLink href="Members" class="sidebar-options-content-item" activeClass="sidebar-options-content-item-active">
                     <img src="img/members.svg" alt="">
                     <p>Members</p>
-                </div>
-                <div class="sidebar-options-content-item">
+                </NavLink>
+                <NavLink href="Settings" class="sidebar-options-content-item" activeClass="sidebar-options-content-item-active">
                     <img src="img/settings.svg" alt="">
                     <p>Settings</p>
-                </div>
+                </NavLink>
             </div>
         </div>
         <div class="row sidebar-projects">
