Fixed navbar item styles, separated it to a new component

--- a/ProjectPulse.Web/Components/Layout/Sidebar.razor
+++ b/ProjectPulse.Web/Components/Layout/Sidebar.razor
@@ -13,26 +13,11 @@
         </div>
         <div class="row border-bottom sidebar-options">
             <div class="sidebar-options-content">
-                <NavLink href="/" class="sidebar-options-content-item" activeClass="sidebar-options-content-item-active">
-                    <img src="img/home.svg" alt="">
-                    <p>Home</p>
-                </NavLink>
-                <NavLink href="Messages" class="sidebar-options-content-item" activeClass="sidebar-options-content-item-active">
-                    <img src="img/message.svg" alt="">
-                    <p>Messages</p>
-                </NavLink>
-                <NavLink href="Tasks" class="sidebar-options-content-item" activeClass="sidebar-options-content-item-active">
-                    <img src="img/tasks.svg" alt="">
-                    <p>Tasks</p>
-                </NavLink>
-                <NavLink href="Members" class="sidebar-options-content-item" activeClass="sidebar-options-content-item-active">
-                    <img src="img/members.svg" alt="">
-                    <p>Members</p>
-                </NavLink>
-                <NavLink href="Settings" class="sidebar-options-content-item" activeClass="sidebar-options-content-item-active">
-                    <img src="img/settings.svg" alt="">
-                    <p>Settings</p>
-                </NavLink>
+                <NavItem Title="Home" ToPage="/" IconPath="img/home.svg"></NavItem>
+                <NavItem Title="Messages" ToPage="/Messages" IconPath="img/message.svg"></NavItem>
+                <NavItem Title="Tasks" ToPage="/Tasks" IconPath="img/tasks.svg"></NavItem>
+                <NavItem Title="Members" ToPage="/Members" IconPath="img/members.svg"></NavItem>
+                <NavItem Title="Settings" ToPage="/Settings" IconPath="img/settings.svg"></NavItem>
             </div>
         </div>
         <div class="row sidebar-projects">
