--- a/ProjectPulse.Web/Components/_Imports.razor
+++ b/ProjectPulse.Web/Components/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using ProjectPulse.Web
 @using ProjectPulse.Web.Components
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
