--- a/ProjectPulse.Web/Components/Routes.razor
+++ b/ProjectPulse.Web/Components/Routes.razor
@@ -1,6 +1,8 @@
 ﻿<Router AppAssembly="typeof(Program).Assembly">
     <Found Context="routeData">
-        <RouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)"/>
-        <FocusOnNavigate RouteData="routeData" Selector="h1"/>
+        <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
     </Found>
+    <NotFound>
+        <h1>Page not found</h1>
+    </NotFound>
 </Router>
