--- a/ProjectPulse.Web/Components/Pages/Login.razor
+++ b/ProjectPulse.Web/Components/Pages/Login.razor
@@ -58,14 +58,14 @@
                 new Claim(ClaimTypes.Name, User.UserName),
                 new Claim(ClaimTypes.NameIdentifier, userId),
             };
-            var identity = new ClaimsIdentity(claims, CookieAuthenticationDefaults.AuthenticationScheme);
+            var identity = new ClaimsIdentity(claims, "Auth");
             var principal = new ClaimsPrincipal(identity);
 
-            await HttpContextAccessor.HttpContext.SignInAsync(CookieAuthenticationDefaults.AuthenticationScheme, principal);
+            await HttpContextAccessor.HttpContext.SignInAsync("Auth", principal);
 
             var cookieOptions = new CookieOptions
             {
-                Expires = DateTimeOffset.UtcNow.AddDays(1),
+                Expires = DateTimeOffset.UtcNow.AddMinutes(1),
                 HttpOnly = true,
                 Secure = true,
                 SameSite = SameSiteMode.Strict
