--- a/ProjectPulse.Web/Components/Routes.razor
+++ b/ProjectPulse.Web/Components/Routes.razor
@@ -1,8 +1,10 @@
-﻿<Router AppAssembly="typeof(Program).Assembly">
-    <Found Context="routeData">
-        <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
-    </Found>
-    <NotFound>
-        <h1>Page not found</h1>
-    </NotFound>
-</Router>
+﻿<CascadingAuthentificationState>
+    <Router AppAssembly="typeof(Program).Assembly">
+        <Found Context="routeData">
+            <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
+        </Found>
+        <NotFound>
+            <h1>Page not found</h1>
+        </NotFound>
+    </Router>
+</CascadingAuthentificationState>
