--- a/ProjectPulse.Web/Components/Layout/MainLayout.razor
+++ b/ProjectPulse.Web/Components/Layout/MainLayout.razor
@@ -1,7 +1,11 @@
-﻿@inherits LayoutComponentBase
+﻿@using ProjectPulse.DataAccess.DTOs.Projects
+@inherits LayoutComponentBase
+
+@inject HttpClient HttpClient
+@inject IHttpContextAccessor HttpContextAccessor
 
 <div class="wrapper">
-    <Sidebar></Sidebar>
+    <Sidebar Projects="Projects"></Sidebar>
     <div class="main-content" id="main-content">
         <Navbar></Navbar>
         <main role="main" class="pb-3">
@@ -17,3 +21,32 @@
 </div>
 
 <script src="js/app.js"></script>
+
+@code
+{
+    private List<ProjectDto> Projects { get; set; }= new ();
+    
+    private string GetUserId()
+    {
+        if (HttpContextAccessor.HttpContext!.Request.Cookies.TryGetValue("UserId", out var userId))
+        {
+            return userId;
+        }
+
+        return "User ID not found";
+    }
+    
+    protected override async Task OnInitializedAsync()
+    {
+        string userId = GetUserId();
+        var response = await HttpClient.GetAsync($"api/users/{userId}/projects");
+        if (response.IsSuccessStatusCode)
+        {
+            Projects = (await response.Content.ReadFromJsonAsync<List<ProjectDto>>())!;
+        }
+        else
+        {
+            throw new ApplicationException("Unable to fetch user's projects");
+        }
+    }
+}
