--- a/ProjectPulse.Web/Components/Pages/Register.razor
+++ b/ProjectPulse.Web/Components/Pages/Register.razor
@@ -73,7 +73,7 @@
 
             var cookieOptions = new CookieOptions
             {
-                Expires = DateTimeOffset.UtcNow.AddMinutes(1),
+                Expires = DateTimeOffset.UtcNow.AddDays(1),
                 HttpOnly = true,
                 Secure = true,
                 SameSite = SameSiteMode.Strict
