--- a/ProjectPulse.Web/Components/Layout/MainLayout.razor
+++ b/ProjectPulse.Web/Components/Layout/MainLayout.razor
@@ -1,8 +1,10 @@
 ﻿@using ProjectPulse.DataAccess.DTOs.Projects
+@using ProjectPulse.Web.Services.Projects
+@using ProjectPulse.Web.Services.Users
 @inherits LayoutComponentBase
 
-@inject HttpClient HttpClient
-@inject IHttpContextAccessor HttpContextAccessor
+@inject IUsersService UsersService
+@inject IProjectsService ProjectsService
 
 <div class="wrapper">
     <Sidebar Projects="Projects"></Sidebar>
@@ -26,27 +28,11 @@
 {
     private List<ProjectDto> Projects { get; set; }= new ();
     
-    private string GetUserId()
-    {
-        if (HttpContextAccessor.HttpContext!.Request.Cookies.TryGetValue("UserId", out var userId))
-        {
-            return userId;
-        }
-
-        return "User ID not found";
-    }
     
     protected override async Task OnInitializedAsync()
     {
-        string userId = GetUserId();
-        var response = await HttpClient.GetAsync($"api/users/{userId}/projects");
-        if (response.IsSuccessStatusCode)
-        {
-            Projects = (await response.Content.ReadFromJsonAsync<List<ProjectDto>>())!;
-        }
-        else
-        {
-            throw new ApplicationException("Unable to fetch user's projects");
-        }
+        string userId = UsersService.GetUserId();
+        var projects = await ProjectsService.GetProjects(userId);
+        Projects = projects!;
     }
 }
