--- a/ProjectPulse.Web/Components/Pages/Register.razor
+++ b/ProjectPulse.Web/Components/Pages/Register.razor
@@ -1,13 +1,10 @@
-@using System.IdentityModel.Tokens.Jwt
-@using System.Security.Claims
-@using System.Text.Json
-@using Microsoft.AspNetCore.Authentication
 @using ProjectPulse.DataAccess.DTOs.Users
 @using ProjectPulse.Web.Components.Layout
+@using ProjectPulse.Web.Services.Accounts
 @page "/Account/Register"
 @layout LogInLayout
 
-@inject HttpClient HttpClient
+@inject IAccountsService AccountsService
 @inject NavigationManager Navigation
 
 <div class="login-container">
@@ -41,51 +38,16 @@
     [SupplyParameterFromForm]
     private AddUserDto User { get; set; } = new ();
     
-    [Inject]
-    private IHttpContextAccessor HttpContextAccessor { get; set; }
-
     private string ErrorMessage { get; set; } = string.Empty;
 
     private async Task HandleRegistration()
     {
-        var response = await HttpClient.PostAsJsonAsync("api/accounts/register", User);
-    
-
-        if (response.IsSuccessStatusCode)
+        string? error = await AccountsService.Register(User);
+        if (error == null)
         {
-            var responseContent = await response.Content.ReadAsStringAsync();
-            var jsonDoc = JsonDocument.Parse(responseContent);
-            var token = jsonDoc.RootElement.GetProperty("token").GetString();
-
-            var handler = new JwtSecurityTokenHandler();
-            var jwtToken = handler.ReadJwtToken(token);
-            var userId = jwtToken.Claims.First(claim => claim.Type == "nameid").Value;
-
-            var claims = new[]
-            {
-                new Claim(ClaimTypes.Name, User.UserName),
-                new Claim(ClaimTypes.NameIdentifier, userId),
-            };
-            var identity = new ClaimsIdentity(claims, "Auth");
-            var principal = new ClaimsPrincipal(identity);
-
-            await HttpContextAccessor.HttpContext.SignInAsync("Auth", principal);
-
-            var cookieOptions = new CookieOptions
-            {
-                Expires = DateTimeOffset.UtcNow.AddDays(1),
-                HttpOnly = true,
-                Secure = true,
-                SameSite = SameSiteMode.Strict
-            };
-            HttpContextAccessor.HttpContext.Response.Cookies.Append("UserId", userId, cookieOptions);
-            HttpContextAccessor.HttpContext.Response.Cookies.Append("UserName", User.UserName, cookieOptions);
             Navigation.NavigateTo("/");
         }
-        else
-        {
-            var error = await response.Content.ReadAsStringAsync();
-            ErrorMessage = error;
-        }
+
+        ErrorMessage = error!;
     }
 }
