Fixed not-working javascript issue

--- a/ProjectPulse.Web/Components/Layout/NavItem.razor
+++ b/ProjectPulse.Web/Components/Layout/NavItem.razor
@@ -1,5 +1,7 @@
+@inject IJSRuntime JS
+
 <div>
-    <NavLink href="@ToPage" class="sidebar-options-content-item" Match="NavLinkMatch.All" activeClass="sidebar-options-content-item-active">
+    <NavLink href="@ToPage" class="sidebar-options-content-item" Match="NavLinkMatch.All" activeClass="sidebar-options-content-item-active" @onclick="HandleOptionTabClick">
         <img src="@IconPath" alt="">
         <p>@Title</p>
     </NavLink>
@@ -13,4 +15,9 @@
     public string ToPage { get; set; } = string.Empty;
 
     [Parameter] public string IconPath { get; set; } = string.Empty;
+
+    private async Task HandleOptionTabClick()
+    {
+        await JS.InvokeVoidAsync("HandleOptionTabClick");
+    }
 }
