--- a/ProjectPulse.Web/Components/Layout/AddProject.razor
+++ b/ProjectPulse.Web/Components/Layout/AddProject.razor
@@ -1,29 +1,31 @@
 @using ProjectPulse.DataAccess.DTOs.Projects
 
-<div class="modal fade @ModalClass" tabindex="-1" role="dialog" style="display:@DisplayStyle" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Add New Project</h5>
-                <button type="button" class="close" aria-label="Close" @onclick="CloseModal">
-                    <span aria-hidden="true">X</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div>
-                    <EditForm Model="NewProject" OnValidSubmit="HandleProjectCreation" class="add-project-form">
-                        <div class="form-group add-project-form-group">
-                            <label for="projectName">Project Name</label>
-                            <InputText id="projectName" class="form-control" @bind-Value="NewProject.Name" placeholder="Enter project name"></InputText>
-                        </div>
-                        <div class="form-group">
-                            <label for="projectDescription">Project Description</label>
-                            <InputText id="projectDescription" class="form-control" @bind-Value="NewProject.Description" placeholder="Enter project description"></InputText>
-                        </div>
-                        <div class="add-project-form-submit">
-                            <button type="submit" class="btn btn-primary">Submit</button>
-                        </div>
-                    </EditForm>
+<div class="modal fade @ModalClass" tabindex="-1" role="dialog" style="display:@DisplayStyle; width: 100vw; height: 100vh; align-items: center; justify-content: center;" aria-hidden="true">
+    <div>
+        <div class="modal-dialog add-project-modal-body" role="document" style="min-width: 500px">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Add New Project</h5>
+                    <button type="button" class="close" aria-label="Close" @onclick="CloseModal">
+                        <span aria-hidden="true">X</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div>
+                        <EditForm Model="NewProject" OnValidSubmit="HandleProjectCreation" class="add-project-form">
+                            <div class="form-group add-project-form-group">
+                                <label for="projectName">Project Name</label>
+                                <InputText id="projectName" class="form-control" @bind-Value="NewProject.Name" placeholder="Enter project name"></InputText>
+                            </div>
+                            <div class="form-group add-project-form-group">
+                                <label for="projectDescription">Project Description</label>
+                                <InputText id="projectDescription" class="form-control" @bind-Value="NewProject.Description" placeholder="Enter project description"></InputText>
+                            </div>
+                            <div class="add-project-form-submit">
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                            </div>
+                        </EditForm>
+                    </div>
                 </div>
             </div>
         </div>
@@ -39,7 +41,7 @@
     public bool DisplayModal { get; set; }
     
     private string ModalClass => DisplayModal ? "show" : "";
-    private string DisplayStyle => DisplayModal ? "block" : "none";
+    private string DisplayStyle => DisplayModal ? "flex" : "none";
     
 
     private void CloseModal()
