--- a/ProjectPulse.Web/Components/Pages/Project.razor
+++ b/ProjectPulse.Web/Components/Pages/Project.razor
@@ -7,19 +7,32 @@
 
 <section class="projects-wrapper">
     <div class="projects-top">
-        <h1>@_project.Name</h1>
-        <div class="projects-buttons">
-            <div class="projects-button-item">
-                <img src="img/edit.svg" alt="">
+        <div class="projects-top-head">
+            <h1>@_project.Name</h1>
+            <div class="projects-buttons">
+                <div class="projects-button-item">
+                    <img src="img/edit.svg" alt="">
+                </div>
+                <div class="projects-button-item">
+                    <img src="img/link.svg" alt="">
+                </div>
+                <div class="projects-button-item">
+                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M3 6H5H21" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M8 6V4C8 3.46957 8.21071 2.96086 8.58579 2.58579C8.96086 2.21071 9.46957 2 10 2H14C14.5304 2 15.0391 2.21071 15.4142 2.58579C15.7893 2.96086 16 3.46957 16 4V6M19 6V20C19 20.5304 18.7893 21.0391 18.4142 21.4142C18.0391 21.7893 17.5304 22 17 22H7C6.46957 22 5.96086 21.7893 5.58579 21.4142C5.21071 21.0391 5 20.5304 5 20V6H19Z" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </div>
             </div>
-            <div class="projects-button-item">
-                <img src="img/link.svg" alt="">
+        </div>
+        <div class="projects-top-footer">
+            <div class="project-description">
+                @_project.Description
             </div>
         </div>
     </div>
     <div class="projects-bottom">
         <div class="project-tasks">
-            <div class="project-tasks-item">
+            <div class="project-tasks-item to-do">
                 <div class="task-column-top">
                     <div class="task-column-left">
                         <span class="task-column-circle"></span>
@@ -39,7 +52,7 @@
                     Tasks
                 </div>
             </div>
-            <div class="project-tasks-item">
+            <div class="project-tasks-item in-progress">
                 <div class="task-column-top">
                     <div class="task-column-left">
                         <span class="task-column-circle"></span>
@@ -56,7 +69,7 @@
                     Tasks
                 </div>
             </div>
-            <div class="project-tasks-item">
+            <div class="project-tasks-item done">
                 <div class="task-column-top">
                     <div class="task-column-left">
                         <span class="task-column-circle"></span>
