--- a/ProjectPulse.Web/Components/Pages/Project.razor.css
+++ b/ProjectPulse.Web/Components/Pages/Project.razor.css
@@ -8,8 +8,18 @@
 
 .projects-top {
     display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.projects-top-head {
+    display: flex;
     align-items: center;
     gap: 20px;
+}
+
+.projects-top-footer {
+    color: #787486;
 }
 
 .projects-top > h1{
@@ -72,9 +82,22 @@
     width: 10px;
     height: 10px;
     border-radius: 100%;
+}
+
+.to-do .task-column-left > span
+{
     background-color: #5030E5;
 }
 
+.in-progress .task-column-left > span
+{
+    background-color: #FFA500;
+}
+
+.done .task-column-left > span
+{
+    background-color: #8BC48A;
+}
 
 .task-column-title {
     font-size: 18px;
@@ -95,5 +118,16 @@
 .task-column-border {
     height: 3px;
     width: 100%;
+}
+
+.to-do .task-column-border{
     background-color: #5030E5;
+}
+
+.in-progress .task-column-border{
+    background-color: #FFA500;
+}
+
+.done .task-column-border{
+    background-color: #8BC48A;
 }
