--- a/ProjectPulse.Web/Components/Pages/Project.razor
+++ b/ProjectPulse.Web/Components/Pages/Project.razor
@@ -1,8 +1,12 @@
 @page "/Project/{projectId:guid}"
+@using ProjectPulse.Core.Models
 @using ProjectPulse.DataAccess.DTOs.Projects
+@using ProjectPulse.DataAccess.DTOs.Tasks
 @using ProjectPulse.Web.Services.Projects
+@using ProjectPulse.Web.Services.Tasks
 
 @inject NavigationManager Navigation
+@inject ITasksService TasksService
 @inject IProjectsService ProjectsService
 
 <section class="projects-wrapper">
@@ -38,7 +42,7 @@
                         <span class="task-column-circle"></span>
                         <p class="task-column-title">To Do</p>
                         <div class="task-column-counter">
-                            <p>3</p>
+                            <p>@TasksToDo.Count</p>
                         </div>
                     </div>
                     <div class="task-column-right">
@@ -49,7 +53,30 @@
                 </div>
                 <div class="task-column-border"></div>
                 <div class="task-column-content">
-                    Tasks
+                    @foreach (var task in TasksToDo)
+                    {
+                        <div class="task-card">
+                            <div class="task-card-head">
+                                <p class="task-title">@task.Title</p>
+                                <div class="task-buttons">
+                                    <div class="projects-button-item">
+                                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M3 6H5H21" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                            <path d="M8 6V4C8 3.46957 8.21071 2.96086 8.58579 2.58579C8.96086 2.21071 9.46957 2 10 2H14C14.5304 2 15.0391 2.21071 15.4142 2.58579C15.7893 2.96086 16 3.46957 16 4V6M19 6V20C19 20.5304 18.7893 21.0391 18.4142 21.4142C18.0391 21.7893 17.5304 22 17 22H7C6.46957 22 5.96086 21.7893 5.58579 21.4142C5.21071 21.0391 5 20.5304 5 20V6H19Z" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>
+                                    </div>
+                                    <div class="projects-button-item">
+                                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M9 18L15 12L9 6" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="task-description">
+                                @task.Description
+                            </div>
+                        </div>
+                    }
                 </div>
             </div>
             <div class="project-tasks-item in-progress">
@@ -58,7 +85,7 @@
                         <span class="task-column-circle"></span>
                         <p class="task-column-title">In Progress</p>
                         <div class="task-column-counter">
-                            <p>4</p>
+                            <p>@TasksInProgress.Count</p>
                         </div>
                     </div>
                     <div class="task-column-right">
@@ -75,7 +102,7 @@
                         <span class="task-column-circle"></span>
                         <p class="task-column-title">Done</p>
                         <div class="task-column-counter">
-                            <p>2</p>
+                            <p>@TasksDone.Count</p>
                         </div>
                     </div>
                     <div class="task-column-right">
@@ -97,6 +124,12 @@
 
     private ProjectDto _project { get; set; } = new ();
 
+    private List<TaskDto> TasksToDo { get; set; } = new ();
+    
+    private List<TaskDto> TasksInProgress { get; set; } = new ();
+    
+    private List<TaskDto> TasksDone { get; set; } = new ();
+
     protected override async Task OnInitializedAsync()
     {
         ProjectDto? project = await ProjectsService.GetProject(ProjectId);
@@ -106,6 +139,33 @@
         }
 
         _project = project!;
+
+        var tasks = await TasksService.GetTasks(ProjectId.ToString());
+        if (tasks == null)
+        {
+            Navigation.NavigateTo("/Error");
+        }
+        SortTasks(tasks!);
+        
+    }
+
+    private void SortTasks(List<TaskDto> tasks)
+    {
+        foreach (var task in tasks)
+        {
+            if (task.Status == TaskStatuses.ToDo)
+            {
+                TasksToDo.Add(task);
+            }
+            else if (task.Status == TaskStatuses.InProgress)
+            {
+                TasksInProgress.Add(task);
+            }
+            else
+            {
+                TasksDone.Add(task);   
+            }
+        }
     }
 
 }
