--- a/ProjectPulse.Web/Components/Pages/Project.razor.css
+++ b/ProjectPulse.Web/Components/Pages/Project.razor.css
@@ -120,6 +120,38 @@
     width: 100%;
 }
 
+.task-card {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 25px;
+}
+
+.task-card-head {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.task-buttons {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.task-title {
+    font-size: 18px;
+    color: #0D062D;
+}
+
+.task-description {
+    font-size: 12px;
+    color: #787486;
+}
+
 .to-do .task-column-border{
     background-color: #5030E5;
 }
