Task creation modal

--- a/ProjectPulse.Web/Components/Layout/Sidebar.razor
+++ b/ProjectPulse.Web/Components/Layout/Sidebar.razor
@@ -1,5 +1,4 @@
-﻿@using Microsoft.EntityFrameworkCore.Metadata.Internal
-@using ProjectPulse.DataAccess.DTOs.Projects
+﻿@using ProjectPulse.DataAccess.DTOs.Projects
 @using ProjectPulse.Web.Services.Projects
 @using ProjectPulse.Web.Services.Users
 @rendermode InteractiveServer
