--- a/ProjectPulse.Web/Components/Pages/Project.razor
+++ b/ProjectPulse.Web/Components/Pages/Project.razor
@@ -4,10 +4,18 @@
 @using ProjectPulse.DataAccess.DTOs.Tasks
 @using ProjectPulse.Web.Services.Projects
 @using ProjectPulse.Web.Services.Tasks
+@using ProjectPulse.Web.Components.Layout
 
 @inject NavigationManager Navigation
 @inject ITasksService TasksService
 @inject IProjectsService ProjectsService
+
+@rendermode InteractiveServer
+
+@if (DisplayModal)
+{
+    <AddTask DisplayModal="DisplayModal" OnClose="OnModalClose" CreateTaskCallback="CreateTask"></AddTask>
+}
 
 <section class="projects-wrapper">
     <div class="projects-top">
@@ -47,7 +55,7 @@
                     </div>
                     <div class="task-column-right">
                         <div class="task-column-icon projects-button-item">
-                            <img src="img/plus.svg" alt="">
+                            <img src="img/plus.svg" alt="" @onclick="ShowModal">
                         </div>
                     </div>
                 </div>
@@ -93,7 +101,30 @@
                 </div>
                 <div class="task-column-border"></div>
                 <div class="task-column-content">
-                    Tasks
+                    @foreach (var task in TasksInProgress)
+                    {
+                        <div class="task-card">
+                            <div class="task-card-head">
+                                <p class="task-title">@task.Title</p>
+                                <div class="task-buttons">
+                                    <div class="projects-button-item">
+                                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M3 6H5H21" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                            <path d="M8 6V4C8 3.46957 8.21071 2.96086 8.58579 2.58579C8.96086 2.21071 9.46957 2 10 2H14C14.5304 2 15.0391 2.21071 15.4142 2.58579C15.7893 2.96086 16 3.46957 16 4V6M19 6V20C19 20.5304 18.7893 21.0391 18.4142 21.4142C18.0391 21.7893 17.5304 22 17 22H7C6.46957 22 5.96086 21.7893 5.58579 21.4142C5.21071 21.0391 5 20.5304 5 20V6H19Z" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>
+                                    </div>
+                                    <div class="projects-button-item">
+                                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M9 18L15 12L9 6" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="task-description">
+                                @task.Description
+                            </div>
+                        </div>
+                    }
                 </div>
             </div>
             <div class="project-tasks-item done">
@@ -110,7 +141,30 @@
                 </div>
                 <div class="task-column-border"></div>
                 <div class="task-column-content">
-                    Tasks
+                    @foreach (var task in TasksDone)
+                    {
+                        <div class="task-card">
+                            <div class="task-card-head">
+                                <p class="task-title">@task.Title</p>
+                                <div class="task-buttons">
+                                    <div class="projects-button-item">
+                                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M3 6H5H21" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                            <path d="M8 6V4C8 3.46957 8.21071 2.96086 8.58579 2.58579C8.96086 2.21071 9.46957 2 10 2H14C14.5304 2 15.0391 2.21071 15.4142 2.58579C15.7893 2.96086 16 3.46957 16 4V6M19 6V20C19 20.5304 18.7893 21.0391 18.4142 21.4142C18.0391 21.7893 17.5304 22 17 22H7C6.46957 22 5.96086 21.7893 5.58579 21.4142C5.21071 21.0391 5 20.5304 5 20V6H19Z" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>
+                                    </div>
+                                    <div class="projects-button-item">
+                                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M9 18L15 12L9 6" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="task-description">
+                                @task.Description
+                            </div>
+                        </div>
+                    }
                 </div>
             </div>
         </div>
@@ -166,6 +220,23 @@
                 TasksDone.Add(task);   
             }
         }
+    }
+    
+    private async Task CreateTask(CreateTaskDto newTask)
+    {
+        await Task.Delay(100);
+    }
+    
+    public bool DisplayModal { get; set; }
+
+    private void ShowModal()
+    {
+        DisplayModal = true;
+    }
+
+    private void OnModalClose(bool isOpen)
+    {
+        DisplayModal = isOpen;
     }
 
 }
