--- a/ProjectPulse.Web/Components/Pages/Project.razor.css
+++ b/ProjectPulse.Web/Components/Pages/Project.razor.css
@@ -104,6 +104,7 @@
     color: #0D062D;
     font-weight: 500;
 }
+
 .task-column-counter {
     display: flex;
     align-items: center;
@@ -150,6 +151,13 @@
 .task-description {
     font-size: 12px;
     color: #787486;
+}
+
+.task-column-content {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 100%;
 }
 
 .to-do .task-column-border{
