--- a/ProjectPulse.Web/Components/Pages/Project.razor
+++ b/ProjectPulse.Web/Components/Pages/Project.razor
@@ -67,7 +67,7 @@
                             <div class="task-card-head">
                                 <p class="task-title">@task.Title</p>
                                 <div class="task-buttons">
-                                    <div class="projects-button-item">
+                                    <div class="projects-button-item" @onclick="() => DeleteTask(task.Id)">
                                         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M3 6H5H21" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                             <path d="M8 6V4C8 3.46957 8.21071 2.96086 8.58579 2.58579C8.96086 2.21071 9.46957 2 10 2H14C14.5304 2 15.0391 2.21071 15.4142 2.58579C15.7893 2.96086 16 3.46957 16 4V6M19 6V20C19 20.5304 18.7893 21.0391 18.4142 21.4142C18.0391 21.7893 17.5304 22 17 22H7C6.46957 22 5.96086 21.7893 5.58579 21.4142C5.21071 21.0391 5 20.5304 5 20V6H19Z" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -107,7 +107,7 @@
                             <div class="task-card-head">
                                 <p class="task-title">@task.Title</p>
                                 <div class="task-buttons">
-                                    <div class="projects-button-item">
+                                    <div class="projects-button-item" @onclick="() => DeleteTask(task.Id)">
                                         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M3 6H5H21" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                             <path d="M8 6V4C8 3.46957 8.21071 2.96086 8.58579 2.58579C8.96086 2.21071 9.46957 2 10 2H14C14.5304 2 15.0391 2.21071 15.4142 2.58579C15.7893 2.96086 16 3.46957 16 4V6M19 6V20C19 20.5304 18.7893 21.0391 18.4142 21.4142C18.0391 21.7893 17.5304 22 17 22H7C6.46957 22 5.96086 21.7893 5.58579 21.4142C5.21071 21.0391 5 20.5304 5 20V6H19Z" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -147,15 +147,10 @@
                             <div class="task-card-head">
                                 <p class="task-title">@task.Title</p>
                                 <div class="task-buttons">
-                                    <div class="projects-button-item">
+                                    <div class="projects-button-item" @onclick="() => DeleteTask(task.Id)">
                                         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M3 6H5H21" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                             <path d="M8 6V4C8 3.46957 8.21071 2.96086 8.58579 2.58579C8.96086 2.21071 9.46957 2 10 2H14C14.5304 2 15.0391 2.21071 15.4142 2.58579C15.7893 2.96086 16 3.46957 16 4V6M19 6V20C19 20.5304 18.7893 21.0391 18.4142 21.4142C18.0391 21.7893 17.5304 22 17 22H7C6.46957 22 5.96086 21.7893 5.58579 21.4142C5.21071 21.0391 5 20.5304 5 20V6H19Z" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                        </svg>
-                                    </div>
-                                    <div class="projects-button-item">
-                                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M9 18L15 12L9 6" stroke="#5030E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                         </svg>
                                     </div>
                                 </div>
@@ -232,6 +227,19 @@
     private async Task CreateTask(CreateTaskDto newTask)
     {
         await TasksService.CreateTask(newTask, ProjectId.ToString());
+        
+        var tasks = await GetTasks();
+        TasksToDo = new List<TaskDto>();
+        TasksInProgress = new List<TaskDto>();
+        TasksDone = new List<TaskDto>();
+        SortTasks(tasks);
+        StateHasChanged();
+    }
+
+    private async Task DeleteTask(Guid taskId)
+    {
+        await TasksService.DeleteTask(taskId.ToString());
+        
         var tasks = await GetTasks();
         TasksToDo = new List<TaskDto>();
         TasksInProgress = new List<TaskDto>();
